--- a/src/app/components/templates/main/main.component.html
+++ b/src/app/components/templates/main/main.component.html
@@ -1,9 +1,9 @@
 <main class="main">
-    <section class="main-content">
-      <div class="main-content-apt">
-        <h2>SOLUÇÕES EM <br /> SERVIÇOS E APOIO <br />MARÍTIMO</h2>
-        <p>A EMPRESA QUE VOCÊ CONFIA COM A QUALIDADE QUE VOCê MERECE!</p>
-        <button class="btn-contato" role="button">ENTRE EM CONTATO</button>
-      </div>
-    </section>
+    <div class="main-content-apt">
+      <h2>SOLUÇÕES EM <br /> SERVIÇOS E APOIO <br />MARÍTIMO</h2>
+      <p>A empresa que você confia com a qualidade que você merece!</p>
+      <button
+        style="cursor: pointer;" (click)="toContato()" routerLinkActive="active"
+       class="btn-contato" role="button">ENTRE EM CONTATO</button>
+    </div>
 </main>
