--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -2,13 +2,17 @@
     position: relative;
     margin: auto;
     text-align: center;
-    width: 700px; /* Altere a largura máxima conforme necessário */
+    width: 62vw;
+    height: 48vh;
+    max-width: 900px;
+    max-height: 600px;
     border-radius: 15px;
-    box-shadow: 0 8px 16px #dce1e1;
+    box-shadow: 0 8px 16px #81818198;
 
     img{
         display: none;
         border-radius: 15px;
+        width: 100%;
     }
 
     .carousel-dot-container{
@@ -43,7 +47,7 @@
 .carousel-container img.image-active{
     display: block;
     width: 100%;
-    height: 400px;
+    height: 100%;
 }
 
 .fade{
@@ -60,3 +64,15 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .carousel-container {
+      /* Ajuste o tamanho do carousel para dispositivos móveis */
+      width: 100%;
+      height: 200px;
+    }
+  
+    .carousel-container img.image-active {
+      /* Ajuste a altura da imagem para dispositivos móveis, para evitar desproporcionalidade */
+      height: 200px; /* Ajuste conforme necessário para seu layout */
+    }
+  }
