--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-*{
+*, *::before, *::after{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -16,7 +16,7 @@ body{
 :root {
   --black: #191919;
   --white: #efefef;
-  --grey: #e3e3e3;
+  --grey: #b9b9b9;
   --azul: #053BA6;
 }
 
@@ -24,4 +24,9 @@ body{
   width: 100%;
   height: 100vh;
   padding: 0% 7% 0% 7%;
+}
+
+html{
+  scroll-behavior: smooth;
+  scroll-padding-top: 5rem;
 }
