--- a/src/app/components/templates/servicos/servicos.component.html
+++ b/src/app/components/templates/servicos/servicos.component.html
@@ -4,9 +4,27 @@
       <div class="s-content-apt">
         <h1 class="s-content-title">Conheça nossos <span style="color: var(--azul); font-weight: bold;">serviços</span></h1>
 
-        <div>
+        <div class="card-xl">
           <app-card></app-card>
         </div>
+
+        <div class="cartoes">
+          <div class="cartao" *ngFor="let card of cardsData">
+            <div class="lado1">
+              <div class="content">
+                <img [src]="card.srcImg" style="height: 4vh;">
+                <h3 style="text-align: center;">{{ card.title }}</h3>
+              </div>
+            </div>
+            <div class="lado2">
+              <div class="content">
+                <p class="text">{{ card.text }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+
         <p>A Maciel Marítima tem mais de 10 anos de experiência e oferece serviços de qualidade em rebocadores, empurradores, escafandria, mergulho, operações portuárias e navegação de apoio marítimo. Navegue com segurança e confiança, escolha Maciel Marítima.</p>
 
         <div id="linha-horizontal"></div>
