--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container wrp">
     <div class="card">
         <div class="face face1">
             <div class="content">
