--- a/src/app/components/templates/contato/contato.component.html
+++ b/src/app/components/templates/contato/contato.component.html
@@ -32,7 +32,7 @@
                 <a href="https://www.linkedin.com/in/maciel-mar%C3%ADtima-7908145a/?originalSubdomain=br" target="_blank"><img src="assets/icons/linkedin.svg" alt=""></a>
             </div>              
         </div>
-        <div class="card-map wrp">
+        <div class="card-map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7971.026240755947!2d-44.35396500000001!3d-2.661931!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f68f1738344849%3A0x915e41e0f8c75ab0!2sMACIEL%20MARITIMA!5e0!3m2!1spt-BR!2sbr!4v1691348397953!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
