--- a/src/app/components/templates/sobre/sobre.component.html
+++ b/src/app/components/templates/sobre/sobre.component.html
@@ -17,3 +17,6 @@
     <h2>NOSSO DIFERENCIAL NO MERCADO</h2>
     <h5>UMA EMPRESA ENTRE AS MAIORES DO MERCADO, PENSANDO NA MELHOR FORMA EM ATENDÊ-LO.</h5>
   </div>
+
+<!--   <div style="background-color: white; width: 100%;
+  height: 4vw;"></div> -->
