--- a/src/app/components/templates/sobre/sobre.component.scss
+++ b/src/app/components/templates/sobre/sobre.component.scss
@@ -35,7 +35,6 @@
     background-position: center;
     background-size: cover;
     background-image: url('../../../../assets/mar.jpg');
-    background-attachment: fixed;
 
     color: white;
     display: flex;
@@ -54,7 +53,7 @@
 
   @media screen and (max-width: 768px) {
     .container{
-      height: 6vh;
+      height: 10vh;
 
       h2{
         font-size: 2.5vw;
@@ -78,3 +77,24 @@
     }
 
   }
+
+/*   @media screen and (min-width: 768px) {
+    .container{
+    height: 10vh;
+
+    }
+}
+
+ */
+
+ @media screen and (max-width: 992px) {
+  .container{
+  height: 10vh;
+  }
+}
+@media screen and (min-width: 992px) {
+  .container{
+  background-attachment: fixed;
+
+  }
+}
