--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,4 +3,8 @@
 <app-sobre id="sobre"></app-sobre>
 <app-servicos id="servicos"></app-servicos>
 <app-contato id="contato"></app-contato>
+<div class="container">
+    <h2>ATENDIMENTO RÁPIDO E EFICIENTE</h2>
+    <h5>FAÇA JÁ SUA COTAÇÃO E SEJA MUITO BEM ATENDIDO COM QUALIDADE E A SEGURANÇA QUE VOCÊ PROCURA!</h5>
+</div>
 <app-footer></app-footer>
