--- a/src/app/components/templates/contato/contato.component.scss
+++ b/src/app/components/templates/contato/contato.component.scss
@@ -22,11 +22,11 @@
     .card{
         border-radius: 20px;
         margin-bottom: 5%;
-        background-color: rgb(221, 221, 221);
+        background-color: rgb(224, 224, 224);
         width: 55vw;
-        -webkit-box-shadow: 3px 1px 22px 1px rgba(0,0,0,0.36);
-        -moz-box-shadow: 3px 1px 22px 1px rgba(0,0,0,0.36);
-        box-shadow: 3px 1px 22px 1px rgba(0,0,0,0.36);
+        -webkit-box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+        -moz-box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
 
         display: flex;
         flex-direction: row;
@@ -230,20 +230,18 @@ textarea {
         } */
         .card{
             
-            margin-bottom: 4rem;
+            margin-bottom: 2rem;
             width: 98%;
-            background-color: #e6e6e6;
             border-radius: 8px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            -webkit-box-shadow: 0px 0px 49px -2px rgba(0,0,0,0.24);
--moz-box-shadow: 0px 0px 49px -2px rgba(0,0,0,0.24);
-box-shadow: 0px 0px 49px -2px rgba(0,0,0,0.24);
+            -webkit-box-shadow: 0px 0px 49px -2px rgba(0,0,0,0.10);
+            -moz-box-shadow: 0px 0px 49px -2px rgba(0,0,0,0.10);
+            box-shadow: 0px 0px 49px -2px rgba(0,0,0,0.10);
             margin-top: 0.7rem;
 
             .card-form{
-                background-color: #e6e6e6;
                 border-radius: 8px;
                 width: 100%;
                 padding-top: 0rem;
