--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,7 +4,7 @@
     height: 300px;
     background-position: center;
     background-size: cover;
-    background-image: url('../../../assets/mar.jpg');
+    background-image: url('../../../assets/fundo.png');
 
     color: white;
     display: flex;
@@ -14,9 +14,11 @@
 
     h2{
       font-size: 2vw;
+      text-shadow: 0px 1px 2px #000000;
     }
     h5{
       font-size: 1vw;
+      text-shadow: 0px 1px 2px #000000;
     }
   }
 
