--- a/src/app/components/templates/header/header.component.scss
+++ b/src/app/components/templates/header/header.component.scss
@@ -144,6 +144,7 @@
 @media(max-width: 992px) {
 
   .menu{
+    z-index: 999;
     display: block;
     background-color: rgba(255, 255, 255, 0.363);
     backdrop-filter: blur(15px);
