--- a/src/app/components/templates/main/main.component.scss
+++ b/src/app/components/templates/main/main.component.scss
@@ -1,5 +1,5 @@
 .main{
-    background-image: url('../../../../assets/bg_main.jpg');
+    background-image: url('../../../../assets/bg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -68,13 +68,14 @@
 
   .main{ 
     height: 150vw;
-    justify-content: center;
-    align-items: center;
+    justify-content: end;
+    align-items: start;
     display: flex;
     flex-direction: column;
+    padding-bottom: 9%;
 
     .main-content-apt{
-      width: 230px;
+      width: auto;
       h2{
         font-size: 6vw;
       }
