--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
-<app-main id="home"></app-main>
-<app-sobre id="sobre"></app-sobre>
-<app-servicos id="servicos"></app-servicos>
-<app-contato id="contato"></app-contato>
-<div class="container">
+<app-main  id="home"></app-main>
+<app-sobre class="reveal" id="sobre"></app-sobre>
+<app-servicos class="reveal" id="servicos"></app-servicos>
+<app-contato class="reveal" id="contato"></app-contato>
+<div class="container reveal">
     <h2>ATENDIMENTO RÁPIDO E EFICIENTE</h2>
     <h5>FAÇA JÁ SUA COTAÇÃO E SEJA MUITO BEM ATENDIDO COM QUALIDADE E A SEGURANÇA QUE VOCÊ PROCURA!</h5>
 </div>
-<app-footer></app-footer>
+<app-footer class="reveal"></app-footer>
