--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -14,11 +14,16 @@
 
     h2{
       font-size: 2vw;
-      text-shadow: 0px 1px 2px #000000;
+      text-shadow: 0px 1px 2px #000000,
+      0px 0px 15px rgb(58, 58, 58),
+			   0px 0px 30px rgb(19, 19, 19);;
     }
     h5{
       font-size: 1vw;
-      text-shadow: 0px 1px 2px #000000;
+      text-shadow: 0px 0px 5px rgb(19, 19, 19), 
+              
+			   0px 0px 15px rgb(58, 58, 58),
+			   0px 0px 30px rgb(19, 19, 19);
     }
   }
 
@@ -72,9 +77,12 @@
 }
 @media screen and (min-width: 992px) {
   .container{
-  background-attachment: fixed;
+  background-attachment: fixed !important;
 
   }
 }
 
 
+#home{
+  border-radius: 8px;
+}
