--- a/src/app/components/templates/footer/footer.component.scss
+++ b/src/app/components/templates/footer/footer.component.scss
@@ -6,8 +6,8 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-top-left-radius: 2vh;
+  border-top-right-radius: 2vh;
   }
   
   .footer .row{
