--- a/src/app/components/templates/sobre/sobre.component.scss
+++ b/src/app/components/templates/sobre/sobre.component.scss
@@ -8,7 +8,7 @@
     padding: 0 7%;
   
       .s-content-apt{
-        margin-top: 5%;
+        margin-top: 3%;
         margin-bottom: 5%;
         display: flex;
         flex-direction: column;
@@ -44,11 +44,16 @@
 
     h2{
       font-size: 2vw;
-      text-shadow: 0px 1px 2px #000000;
+      text-shadow: 0px 1px 2px #000000,
+      0px 0px 15px rgb(58, 58, 58),
+			   0px 0px 30px rgb(19, 19, 19);;
     }
     h5{
       font-size: 1vw;
-      text-shadow: 0px 1px 2px #000000;
+      text-shadow: 0px 0px 5px rgb(19, 19, 19), 
+              
+			   0px 0px 15px rgb(58, 58, 58),
+			   0px 0px 30px rgb(19, 19, 19);
     }
   }
 
