--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,9 @@ html{
   scroll-behavior: smooth;
   scroll-padding-top: 5rem;
 }
+
+#linha-horizontal {
+  margin-top: 0.5%;
+  width: 50%;
+  border: 1px solid var(--azul);
+}
