pagina obrigado criada

--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -34,7 +34,7 @@
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="assets/images/foto3.jpeg" alt="">
+                            <img src="assets/images/foto3.jpg" alt="">
                         </div>
                         <figcaption>
                             Registro foto 02/08/2023
@@ -84,7 +84,7 @@
                     <label for="slide-2"><img src="assets/images/foto2.jpeg" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-3"><img src="assets/images/foto3.jpeg" alt=""></label>
+                    <label for="slide-3"><img src="assets/images/foto3.jpg" alt=""></label>
                 </li>
                 <li>
                     <label for="slide-4"><img src="assets/images/foto4.jpg" alt=""></label>
