--- a/src/app/components/templates/header/header.component.html
+++ b/src/app/components/templates/header/header.component.html
@@ -1,14 +1,14 @@
 <header class="header">
     <div class="header-content">
-      <a class="header-logo" style="cursor: pointer;" (click)="toHome()" routerLink="/home" routerLinkActive="active">
+      <a class="header-logo" style="cursor: pointer;" (click)="toHome()" routerLink="" routerLinkActive="active">
         <img class="header-img" src="assets/logo.svg" alt="Logo" />
       </a>
       <nav class="header-nav">
         <nav class="header-nav">
-          <a style="cursor: pointer;" (click)="toHome()" routerLink="/home" routerLinkActive="active">Início</a>
-          <a style="cursor: pointer;" (click)="toSobre()" routerLinkActive="active">Sobre</a>
-          <a style="cursor: pointer;" (click)="toServicos()" routerLinkActive="active">Serviços</a>
-          <a style="cursor: pointer;" (click)="toContato()" routerLinkActive="active">Contato</a>
+          <a style="cursor: pointer;" (click)="toHome()" routerLink="" routerLinkActive="active">Início</a>
+          <a style="cursor: pointer;" (click)="toSobre()" routerLinkActive="active" routerLink="">Sobre</a>
+          <a style="cursor: pointer;" (click)="toServicos()" routerLinkActive="active" routerLink="">Serviços</a>
+          <a style="cursor: pointer;" (click)="toContato()" routerLinkActive="active" routerLink="">Contato</a>
         </nav>
       </nav>
     </div>
