--- a/src/app/components/templates/footer/footer.component.html
+++ b/src/app/components/templates/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer">
-        <div class="row">
-            <a class="header-logo" style="cursor: pointer;" (click)="toHome()" routerLink="/home" routerLinkActive="active">
+        <div class="">
+            <a class="header-logo" style="cursor: pointer;" (click)="toHome()" routerLink="" routerLinkActive="active">
                 <img class="header-img" src="assets/logoW.png" alt="Logo" />
             </a>
         </div>
@@ -12,7 +12,7 @@
             <h3>Rua do Recreio, 100 Porto Grande | Vila Maranhão - São Luís / MA            </h3>
         </div>
         
-        <div class="row">
+        <div class="row" style="padding-bottom: 0.8%;">
             Copyright © 2023 Maciel Marítima - Todos os direitos reservados. || Designed By: <a href="https://www.linkedin.com/in/gabriel-lima-bezerra-18g30/" target="_blank">Gabriel Lima</a>
         </div>
     </div>
