--- a/src/app/components/templates/footer/footer.component.scss
+++ b/src/app/components/templates/footer/footer.component.scss
@@ -1,6 +1,5 @@
 .footer{
   background: var(--azul);
-  padding:0px 0px 30px 0;
   font-family: 'Play', sans-serif;
   text-align:center;
   bottom: 0;
@@ -12,7 +11,7 @@
   
   .footer .row{
   width:100%;
-  margin:1% 0%;
+  margin:1% 0% 0 0;
   padding:0.2% 0% 0 0;
   color:rgb(185, 185, 185);
   font-size:0.8em;
