--- a/src/app/components/templates/main/main.component.scss
+++ b/src/app/components/templates/main/main.component.scss
@@ -1,5 +1,5 @@
 .main{
-    background-image: url('../../../../assets/bg.png');
+    background-image: url('../../../../assets/images/foto3.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
