--- a/src/app/components/templates/contato/contato.component.html
+++ b/src/app/components/templates/contato/contato.component.html
@@ -28,7 +28,7 @@
                 <div class="action">
                     <button type="submit" class="action-button">Enviar</button>
                 </div>
-                <input type="hidden" name="_next" value="http://192.168.1.103:4200/obrigado-contato">
+                <input type="hidden" name="_next" value="https://embarcacoesmacie1.websiteseguro.com/obrigado-contato">
                 <input type="hidden" name="_subject" value="Novo Contato!">
                 <input type="hidden" name="_cc" value="gabriel18lb@outlook.com">
                 <input type="hidden" name="_blacklist" value="spam, hacker, sql, roubo, select">
